# patent-api

./: .gitignore  .travis.yml  README.md  patent-api.cabal  stack.yaml
src/Data/Patent/: Types.hs
src/Data/Patent/Citation/: Format.hs  Parse.hs
src/Data/Patent/Providers/: EPO.hs  Types.hs
src/Data/Patent/Providers/EPO/: Network.hs  PDF.hs  Types.hs
src/Data/Patent/Providers/EPO/Parsers/: Bibliography.hs  XMLDocDB.hs
src/Lib/: Prelude.hs
