name:                patent-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/fros1y/patent-api#readme
license:             AGPL-3
license-file:        LICENSE
author:              Martin Galese
maintainer:          Martin Galese
copyright:           2017 Martin Galese
category:            Patents, API
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Data.Patent.Types
                     , Data.Patent.Citation.Parse
                     , Data.Patent.Citation.Format
                     , Data.Patent.Providers.EPO
                     , Data.Patent.Providers.EPO.PDF
  other-modules:       Data.Patent.Providers.EPO.Types
                       Data.Patent.Providers.EPO.Network
                       Data.Patent.Providers.EPO.Parsers.Bibliography
                       Data.Patent.Providers.EPO.Parsers.XMLDocDB
                       Lib.Prelude
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10
                     , containers
                     , data-default
                     , directory
                     , errors
                     , exceptions
                     , here
                     , http-client >= 0.4
                     , http-types
                     , io-streams
                     , lens >= 4.13
                     , lens-aeson >= 1.0
                     , monad-logger
                     , parsec
                     , protolude >= 0.1.6 && < 0.2
                     , retry
                     , temporary
                     , text
                     , wreq >= 0.4
                     , xml-conduit
                     , string-conversions >= 0.4
                     , turtle


  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude, ScopedTypeVariables


source-repository head
  type:     git
  location: https://github.com/fros1y/patent-api
